--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Sunday, February 02, 2014 - 07:15:26..</p>
+<p>Last compiled Sunday, February 02, 2014 - 07:16:47.</p>
 
 <p>Download and install the lastest version of <a href="http://git-scm.com/downloads">Git.</a></p>
 
