note no spaces in path between "paths"...because no the machine finds "bash"!

--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Tuesday, February 04, 2014 - 8:15:14 PM.</p>
+<p>Last compiled Tuesday, February 04, 2014 - 8:26:45 PM.</p>
 
 <p>Download and install the lastest version of <a href="http://git-scm.com/downloads">Git.</a></p>
 
@@ -228,7 +228,7 @@ application is usually found in <code>/applications/Utilities</code>. A quick wa
 
 <h2>Run these commands</h2>
 
-<pre><code class="sh">git config --global user.name &quot;Your Name&quot;
+<pre><code class="bash">git config --global user.name &quot;Your Name&quot;
 git config --global user.email &quot;your_email@whatever.com&quot;
 git config --global color.ui true
 </code></pre>
@@ -237,7 +237,34 @@ git config --global color.ui true
 
 <p>To confirm your username and email, type <code>git config --list</code> at the $ prompt.</p>
 
-<pre><code class="sh">git config --list
+<pre><code class="bash">git config --list
+</code></pre>
+
+<pre><code>core.symlinks=false
+core.autocrlf=true
+color.diff=auto
+color.status=auto
+color.branch=auto
+color.interactive=true
+pack.packsizelimit=2g
+help.format=html
+http.sslcainfo=/bin/curl-ca-bundle.crt
+sendemail.smtpserver=/bin/msmtp.exe
+diff.astextplain.textconv=astextplain
+rebase.autosquash=true
+user.name=Alan Arnholt
+user.email=arnholtat@appstate.edu
+core.repositoryformatversion=0
+core.filemode=false
+core.bare=false
+core.logallrefupdates=true
+core.symlinks=false
+core.ignorecase=true
+core.hidedotfiles=dotGitOnly
+remote.origin.fetch=+refs/heads/*:refs/remotes/origin/*
+remote.origin.url=https://github.com/alanarnholt/STT4870.git
+branch.master.remote=origin
+branch.master.merge=refs/heads/master
 </code></pre>
 
 <p>From the third line of the previous output, one can see the <code>credential.helper</code> is 
@@ -280,7 +307,35 @@ to click on File -&gt; New Project </p>
 
 <p>To check the current status of your repository type:</p>
 
-<pre><code class="sh">git status
+<pre><code class="bash">git status
+</code></pre>
+
+<pre><code>On branch master
+Your branch is up-to-date with &#39;origin/master&#39;.
+
+Changes not staged for commit:
+  (use &quot;git add/rm &lt;file&gt;...&quot; to update what will be committed)
+  (use &quot;git checkout -- &lt;file&gt;...&quot; to discard changes in working directory)
+
+    modified:   GitOne.Rmd
+    deleted:    cache/GITsetup_b0c970510ef94c7a948b007d4995e2c2.RData
+    deleted:    cache/GITsetup_b0c970510ef94c7a948b007d4995e2c2.rdb
+    deleted:    cache/GITsetup_b0c970510ef94c7a948b007d4995e2c2.rdx
+    deleted:    cache/verify_f81c0bc60aa03951091d1db4b41e9fca.RData
+    deleted:    cache/verify_f81c0bc60aa03951091d1db4b41e9fca.rdb
+    deleted:    cache/verify_f81c0bc60aa03951091d1db4b41e9fca.rdx
+
+Untracked files:
+  (use &quot;git add &lt;file&gt;...&quot; to include in what will be committed)
+
+    cache/GITsetup_1e85974789856654fd6170253d9fcbe2.RData
+    cache/GITsetup_1e85974789856654fd6170253d9fcbe2.rdb
+    cache/GITsetup_1e85974789856654fd6170253d9fcbe2.rdx
+    cache/verify_2d584a4c99894e4c308ba44967920be7.RData
+    cache/verify_2d584a4c99894e4c308ba44967920be7.rdb
+    cache/verify_2d584a4c99894e4c308ba44967920be7.rdx
+
+no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
 </code></pre>
 
 <p>The <code>git status</code> shows us what files are not staged for a commit.  Before files can be
@@ -289,43 +344,212 @@ with the command <code>git add file_name</code>.  To add all files in the workin
 can use <code>git add .</code>  Next, all files are added to the staging area, and a snapshot is 
 taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 
-<pre><code class="sh">git add .
+<pre><code class="bash">git add .
 git commit  -m &quot;staging all files&quot;
+</code></pre>
+
+<pre><code>[master a254aa7] staging all files
+ 10 files changed, 1 insertion(+), 1 deletion(-)
+ create mode 100644 Git/cache/GITsetup_1e85974789856654fd6170253d9fcbe2.RData
+ create mode 100644 Git/cache/GITsetup_1e85974789856654fd6170253d9fcbe2.rdb
+ create mode 100644 Git/cache/GITsetup_1e85974789856654fd6170253d9fcbe2.rdx
+ create mode 100644 Git/cache/STATUS_c084c907b84567e22073c1b7e27f7062.RData
+ create mode 100644 Git/cache/STATUS_c084c907b84567e22073c1b7e27f7062.rdb
+ create mode 100644 Git/cache/STATUS_c084c907b84567e22073c1b7e27f7062.rdx
+ create mode 100644 Git/cache/verify_2d584a4c99894e4c308ba44967920be7.RData
+ create mode 100644 Git/cache/verify_2d584a4c99894e4c308ba44967920be7.rdb
+ create mode 100644 Git/cache/verify_2d584a4c99894e4c308ba44967920be7.rdx
 </code></pre>
 
 <p>Check the status after the last commit.</p>
 
-<pre><code class="sh">git status
+<pre><code class="bash">git status
+</code></pre>
+
+<pre><code>On branch master
+Your branch is ahead of &#39;origin/master&#39; by 1 commit.
+  (use &quot;git push&quot; to publish your local commits)
+
+Changes not staged for commit:
+  (use &quot;git add/rm &lt;file&gt;...&quot; to update what will be committed)
+  (use &quot;git checkout -- &lt;file&gt;...&quot; to discard changes in working directory)
+
+    deleted:    cache/ADD_540999b9c1daaa4c31ccd2c535b3e499.RData
+    deleted:    cache/ADD_540999b9c1daaa4c31ccd2c535b3e499.rdb
+    deleted:    cache/ADD_540999b9c1daaa4c31ccd2c535b3e499.rdx
+    deleted:    cache/GITsetup_b0c970510ef94c7a948b007d4995e2c2.RData
+    deleted:    cache/GITsetup_b0c970510ef94c7a948b007d4995e2c2.rdb
+    deleted:    cache/GITsetup_b0c970510ef94c7a948b007d4995e2c2.rdx
+    deleted:    cache/STATUS_c69090ea171fdc61120b83150e1ec346.RData
+    deleted:    cache/STATUS_c69090ea171fdc61120b83150e1ec346.rdb
+    deleted:    cache/STATUS_c69090ea171fdc61120b83150e1ec346.rdx
+    deleted:    cache/verify_f81c0bc60aa03951091d1db4b41e9fca.RData
+    deleted:    cache/verify_f81c0bc60aa03951091d1db4b41e9fca.rdb
+    deleted:    cache/verify_f81c0bc60aa03951091d1db4b41e9fca.rdx
+
+Untracked files:
+  (use &quot;git add &lt;file&gt;...&quot; to include in what will be committed)
+
+    cache/ADD_37d613968d89bfc0fc573bd5f4d62239.RData
+    cache/ADD_37d613968d89bfc0fc573bd5f4d62239.rdb
+    cache/ADD_37d613968d89bfc0fc573bd5f4d62239.rdx
+
+no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
 </code></pre>
 
 <p>Push changes to the remote repository. </p>
 
-<pre><code class="sh">git push
+<pre><code class="bash">git push
 </code></pre>
 
 <p>See if there is anything left to do.</p>
 
-<pre><code class="sh">git status
+<pre><code class="bash">git status
+</code></pre>
+
+<pre><code>On branch master
+Your branch is ahead of &#39;origin/master&#39; by 1 commit.
+  (use &quot;git push&quot; to publish your local commits)
+
+Changes not staged for commit:
+  (use &quot;git add/rm &lt;file&gt;...&quot; to update what will be committed)
+  (use &quot;git checkout -- &lt;file&gt;...&quot; to discard changes in working directory)
+
+    deleted:    cache/ADD_540999b9c1daaa4c31ccd2c535b3e499.RData
+    deleted:    cache/ADD_540999b9c1daaa4c31ccd2c535b3e499.rdb
+    deleted:    cache/ADD_540999b9c1daaa4c31ccd2c535b3e499.rdx
+    deleted:    cache/GITsetup_b0c970510ef94c7a948b007d4995e2c2.RData
+    deleted:    cache/GITsetup_b0c970510ef94c7a948b007d4995e2c2.rdb
+    deleted:    cache/GITsetup_b0c970510ef94c7a948b007d4995e2c2.rdx
+    deleted:    cache/PUSH_ccaa07cffd798cbbde965296b32e8be8.RData
+    deleted:    cache/PUSH_ccaa07cffd798cbbde965296b32e8be8.rdb
+    deleted:    cache/PUSH_ccaa07cffd798cbbde965296b32e8be8.rdx
+    deleted:    cache/STATUS2_5e0c7941154f2f6f6d64705c7f833e80.RData
+    deleted:    cache/STATUS2_5e0c7941154f2f6f6d64705c7f833e80.rdb
+    deleted:    cache/STATUS2_5e0c7941154f2f6f6d64705c7f833e80.rdx
+    deleted:    cache/STATUS_c69090ea171fdc61120b83150e1ec346.RData
+    deleted:    cache/STATUS_c69090ea171fdc61120b83150e1ec346.rdb
+    deleted:    cache/STATUS_c69090ea171fdc61120b83150e1ec346.rdx
+    deleted:    cache/verify_f81c0bc60aa03951091d1db4b41e9fca.RData
+    deleted:    cache/verify_f81c0bc60aa03951091d1db4b41e9fca.rdb
+    deleted:    cache/verify_f81c0bc60aa03951091d1db4b41e9fca.rdx
+
+Untracked files:
+  (use &quot;git add &lt;file&gt;...&quot; to include in what will be committed)
+
+    cache/ADD_37d613968d89bfc0fc573bd5f4d62239.RData
+    cache/ADD_37d613968d89bfc0fc573bd5f4d62239.rdb
+    cache/ADD_37d613968d89bfc0fc573bd5f4d62239.rdx
+    cache/PUSH_4a4f909daa6525f7416b0e0df208f325.RData
+    cache/PUSH_4a4f909daa6525f7416b0e0df208f325.rdb
+    cache/PUSH_4a4f909daa6525f7416b0e0df208f325.rdx
+    cache/STATUS2_8ac7feaeff926fc5b62fe3cb6b50f859.RData
+    cache/STATUS2_8ac7feaeff926fc5b62fe3cb6b50f859.rdb
+    cache/STATUS2_8ac7feaeff926fc5b62fe3cb6b50f859.rdx
+
+no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
 </code></pre>
 
 <p>Show the last three commits with</p>
 
-<pre><code class="sh">git log  -3
+<pre><code class="bash">git log  -3
+</code></pre>
+
+<pre><code>commit a254aa74912df2f0585b0228fc5ae5fdd7dec68d
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Tue Feb 4 20:26:46 2014 -0500
+
+    staging all files
+
+commit 750534b273512236cc04de715f01bff1a1eafdd5
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Tue Feb 4 20:16:26 2014 -0500
+
+    running engine = &quot;sh&quot; from home because my machine can not find &quot;bash&quot; ---UGH!---rerun at office with engine = &quot;bash&quot;
+
+commit b609bf0da0ef7a7d4eedc4874e35515c1c2c4678
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Tue Feb 4 20:12:01 2014 -0500
+
+    who knows
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
 
-<pre><code class="sh">git log --pretty=oneline -3
+<pre><code class="bash">git log --pretty=oneline -3
+</code></pre>
+
+<pre><code>a254aa74912df2f0585b0228fc5ae5fdd7dec68d staging all files
+750534b273512236cc04de715f01bff1a1eafdd5 running engine = &quot;sh&quot; from home because my machine can not find &quot;bash&quot; ---UGH!---rerun at office with engine = &quot;bash&quot;
+b609bf0da0ef7a7d4eedc4874e35515c1c2c4678 who knows
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
 
-<pre><code class="sh">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
+<pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
+</code></pre>
+
+<pre><code>a254aa7 Tue Feb 4 20:26:46 2014 -0500- staging all files [Alan Arnholt]
+750534b Tue Feb 4 20:16:26 2014 -0500- running engine = &quot;sh&quot; from home because my machine can not find &quot;bash&quot; ---UGH!---rerun at office with engine = &quot;bash&quot; [Alan Arnholt]
+b609bf0 Tue Feb 4 20:12:01 2014 -0500- who knows [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
 
-<pre><code class="sh">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
+<pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
+</code></pre>
+
+<pre><code>a254aa7 Tue Feb 4 20:26:46 2014 -0500- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd                                            |   2 +-
+ Git/cache/GITsetup_1e85974789856654fd6170253d9fcbe2.RData | Bin 0 -&gt; 199 bytes
+ Git/cache/GITsetup_1e85974789856654fd6170253d9fcbe2.rdb   |   0
+ Git/cache/GITsetup_1e85974789856654fd6170253d9fcbe2.rdx   | Bin 0 -&gt; 113 bytes
+ Git/cache/STATUS_c084c907b84567e22073c1b7e27f7062.RData   | Bin 0 -&gt; 537 bytes
+ Git/cache/STATUS_c084c907b84567e22073c1b7e27f7062.rdb     |   0
+ Git/cache/STATUS_c084c907b84567e22073c1b7e27f7062.rdx     | Bin 0 -&gt; 113 bytes
+ Git/cache/verify_2d584a4c99894e4c308ba44967920be7.RData   | Bin 0 -&gt; 498 bytes
+ Git/cache/verify_2d584a4c99894e4c308ba44967920be7.rdb     |   0
+ Git/cache/verify_2d584a4c99894e4c308ba44967920be7.rdx     | Bin 0 -&gt; 113 bytes
+ 10 files changed, 1 insertion(+), 1 deletion(-)
+
+750534b Tue Feb 4 20:16:26 2014 -0500- running engine = &quot;sh&quot; from home because my machine can not find &quot;bash&quot; ---UGH!---rerun at office with engine = &quot;bash&quot; [Alan Arnholt]
+ Git/GitOne.Rmd  | 16 +++++++++-------
+ Git/GitOne.html | 18 ++++++++++--------
+ Git/GitOne.md   | 18 ++++++++++--------
+ 3 files changed, 29 insertions(+), 23 deletions(-)
+
+b609bf0 Tue Feb 4 20:12:01 2014 -0500- who knows [Alan Arnholt]
+ Git/cache/LOGP2_faf1a7fcf18137324c7c98647d730ea6.RData   | Bin 273 -&gt; 0 bytes
+ Git/cache/LOGP2_faf1a7fcf18137324c7c98647d730ea6.rdb     |   0
+ Git/cache/LOGP2_faf1a7fcf18137324c7c98647d730ea6.rdx     | Bin 113 -&gt; 0 bytes
+ Git/cache/LOGP3_ad807c34590b81f628e6cb6032102919.RData   | Bin 437 -&gt; 0 bytes
+ Git/cache/LOGP3_ad807c34590b81f628e6cb6032102919.rdb     |   0
+ Git/cache/LOGP3_ad807c34590b81f628e6cb6032102919.rdx     | Bin 113 -&gt; 0 bytes
+ Git/cache/LOGP_85b7cbcb21a72630e78bd3b750ea156f.RData    | Bin 267 -&gt; 0 bytes
+ Git/cache/LOGP_85b7cbcb21a72630e78bd3b750ea156f.rdb      |   0
+ Git/cache/LOGP_85b7cbcb21a72630e78bd3b750ea156f.rdx      | Bin 113 -&gt; 0 bytes
+ Git/cache/LOG_087011b0f8f69f16e2c2e5605086c615.RData     | Bin 343 -&gt; 0 bytes
+ Git/cache/LOG_087011b0f8f69f16e2c2e5605086c615.rdb       |   0
+ Git/cache/LOG_087011b0f8f69f16e2c2e5605086c615.rdx       | Bin 113 -&gt; 0 bytes
+ Git/cache/PUSH_4a4f909daa6525f7416b0e0df208f325.RData    | Bin 121 -&gt; 0 bytes
+ Git/cache/PUSH_4a4f909daa6525f7416b0e0df208f325.rdb      |   0
+ Git/cache/PUSH_4a4f909daa6525f7416b0e0df208f325.rdx      | Bin 113 -&gt; 0 bytes
+ Git/cache/STATUS2_8ac7feaeff926fc5b62fe3cb6b50f859.RData | Bin 687 -&gt; 0 bytes
+ Git/cache/STATUS2_8ac7feaeff926fc5b62fe3cb6b50f859.rdb   |   0
+ Git/cache/STATUS2_8ac7feaeff926fc5b62fe3cb6b50f859.rdx   | Bin 113 -&gt; 0 bytes
+ Git/cache/STATUS3_12105d35cf1bc9dd32a9a4e2704fe895.RData | Bin 589 -&gt; 0 bytes
+ Git/cache/STATUS3_12105d35cf1bc9dd32a9a4e2704fe895.rdb   |   0
+ Git/cache/STATUS3_12105d35cf1bc9dd32a9a4e2704fe895.rdx   | Bin 113 -&gt; 0 bytes
+ Git/cache/STATUS_c084c907b84567e22073c1b7e27f7062.RData  | Bin 699 -&gt; 0 bytes
+ Git/cache/STATUS_c084c907b84567e22073c1b7e27f7062.rdb    |   0
+ Git/cache/STATUS_c084c907b84567e22073c1b7e27f7062.rdx    | Bin 113 -&gt; 0 bytes
+ Git/cache/Systime_7b042452f5d04aa760cf4ad34f0b08ee.RData | Bin 104 -&gt; 0 bytes
+ Git/cache/Systime_7b042452f5d04aa760cf4ad34f0b08ee.rdb   | Bin 73 -&gt; 0 bytes
+ Git/cache/Systime_7b042452f5d04aa760cf4ad34f0b08ee.rdx   | Bin 130 -&gt; 0 bytes
+ Git/cache/verify_2d584a4c99894e4c308ba44967920be7.RData  | Bin 368 -&gt; 0 bytes
+ Git/cache/verify_2d584a4c99894e4c308ba44967920be7.rdb    |   0
+ Git/cache/verify_2d584a4c99894e4c308ba44967920be7.rdx    | Bin 113 -&gt; 0 bytes
+ 30 files changed, 0 insertions(+), 0 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
