staging all files

--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Tuesday, February 04, 2014 - 8:26:45 PM.</p>
+<p>Last compiled Tuesday, February 04, 2014 - 8:33:00 PM.</p>
 
 <p>Download and install the lastest version of <a href="http://git-scm.com/downloads">Git.</a></p>
 
@@ -268,7 +268,7 @@ branch.master.merge=refs/heads/master
 </code></pre>
 
 <p>From the third line of the previous output, one can see the <code>credential.helper</code> is 
-being used. </p>
+being used (when I run this with OSX, but not from home.) </p>
 
 <h3>Creating a GitHub Account</h3>
 
